--- a/build.gradle
+++ b/build.gradle
@@ -4,20 +4,9 @@ plugins {
     id 'net.darkhax.curseforgegradle' version '1.1.18' apply false
 }
 
-tasks.register('buildAll') {
-    dependsOn ':platform:fabric:build',
-            ':platform:neoforge:build',
-            ':platform:forge:jarJar'
+tasks.register('buildRelease') {
+    dependsOn ':platform:fabric:buildRelease',
+            ':platform:neoforge:buildRelease',
+            ':platform:forge:buildRelease'
     group = 'build'
-    doLast {
-        def output = file("output/${version}")
-        output.mkdirs()
-        copy { from file("platform/fabric/build/libs/${mod_id}-fabric-${minecraft_version}-${version}.jar") into output }
-        copy { from file("platform/neoforge/build/libs/${mod_id}-neoforge-${minecraft_version}-${version}.jar") into output }
-        copy {
-            from file("platform/forge/build/libs/${mod_id}-forge-${minecraft_version}-${version}-all.jar")
-            rename { it.replace('-all', '') }
-            into output
-        }
-    }
 }
