--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,8 @@
 # Project
 group=dev.obscuria.healight
-java_version=21
-version=1.0.0
-minecraft_version=1.21.1
-minecraft_version_range=[1.21, 1.22)
-parchment_minecraft=1.21
-parchment_version=2024.07.28
-neo_form_version=1.21.1-20240808.144430
+java_version=17
+version=1.0.1
+minecraft_version=1.20.1
 
 # Mod
 mod_name=Healight
@@ -17,22 +13,15 @@ credits=
 description=Enhances the existing damage flash by adding green glow when entities heal, providing better visual feedback.
 
 # Fabric
-fabric_version=0.105.0+1.21.1
-fabric_loader_version=0.16.5
-fabric_modmenu_version=11.0.2
+fabric_version=0.92.3+1.20.1
+fabric_loader_version=0.16.10
 
 # Forge
-forge_version=52.0.19
-forge_loader_version_range=[0,)
-
-# NeoForge
-neoforge_version=21.1.64
-neoforge_loader_version_range=[4,)
+forge_version=47.3.0
 
 # Publishing
-curseforge_fabric_id=1123974
-curseforge_forge_id=1123970
-curseforge_neoforge_id=1123977
+publish_curseforge_id=1123974
+publish_modrinth_id=0
 publish_release_type=release
 
 # Gradle
