--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,56 +1,39 @@
 plugins {
-    id 'mod-common'
-    id 'net.neoforged.moddev'
+    id 'idea'
+    id 'java'
+    id 'maven-publish'
+    id 'org.spongepowered.gradle.vanilla'
+    id "com.github.johnrengelman.shadow" version "8.1.0"
 }
 
-neoForge {
-    neoFormVersion = neo_form_version
-
-    def at = file('src/main/resources/META-INF/accesstransformer.cfg')
-    if (at.exists()) {
-        accessTransformers.add(at.absolutePath)
-    }
-    parchment {
-        minecraftVersion = parchment_minecraft
-        mappingsVersion = parchment_version
-    }
+base {
+    archivesName = "${mod_name}-common-${minecraft_version}"
 }
 
-apply from: 'dependencies.gradle'
-
-configurations {
-    commonJava {
-        canBeResolved = false
-        canBeConsumed = true
-    }
-    commonResources {
-        canBeResolved = false
-        canBeConsumed = true
-    }
-    commonGeneratedResources {
-        canBeResolved = false
-        canBeConsumed = true
+minecraft {
+    version(minecraft_version)
+    if(file("src/main/resources/${mod_id}.accesswidener").exists()){
+        accessWideners(file("src/main/resources/${mod_id}.accesswidener"))
     }
 }
 
-sourceSets {
-    generated {
-        resources {
-            srcDir 'src/generated/resources'
+dependencies {
+    compileOnly group:'org.spongepowered', name:'mixin', version:'0.8.5'
+    implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.1'
+    annotationProcessor group: 'io.github.llamalad7', name: 'mixinextras-common', version: '0.3.5'
+    shadow(annotationProcessor("io.github.llamalad7:mixinextras-common:0.4.1"))
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            artifactId base.archivesName.get()
+            from components.java
+        }
+    }
+    repositories {
+        maven {
+            url "file://" + System.getenv("local_maven")
         }
     }
 }
-
-artifacts {
-    commonJava sourceSets.main.java.sourceDirectories.singleFile
-    commonResources sourceSets.main.resources.sourceDirectories.singleFile
-    commonGeneratedResources sourceSets.generated.resources.sourceDirectories.singleFile
-}
-
-tasks.register('buildApi', Jar) {
-    group = 'build'
-    from sourceSets.main.output
-    include 'dev/obscuria/fragmentum/api/**'
-    archiveFileName = "fragmentum-api-${minecraft_version}-${version}.jar"
-}
-
