--- a/platform/forge/build.gradle
+++ b/platform/forge/build.gradle
@@ -1,59 +1,70 @@
-import net.darkhax.curseforgegradle.TaskPublishCurseForge
-
 plugins {
-    id 'mod-platform'
-    id 'net.minecraftforge.gradle' version '[6.0.24,6.2)'
-    id 'org.spongepowered.mixin' version '0.7-SNAPSHOT'
-    id "com.modrinth.minotaur" version "2.+"
+    id 'idea'
+    id 'maven-publish'
+    id 'net.minecraftforge.gradle'
+    id 'org.spongepowered.mixin'
+}
+
+base {
+    archivesName = "${mod_name}-forge-${minecraft_version}"
 }
 
 mixin {
     add(sourceSets.main, "${mod_id}.refmap.json")
+
     config("${mod_id}.mixins.json")
     config("${mod_id}.forge.mixins.json")
 }
 
 minecraft {
     mappings channel: 'official', version: minecraft_version
-    copyIdeResources = true
-    reobf = false
 
-    def at = file('src/main/resources/META-INF/accesstransformer.cfg')
-    if (at.exists()) {
-        accessTransformer = at
+    copyIdeResources = true
+
+    if (file('src/main/resources/META-INF/accesstransformer.cfg').exists()) {
+        accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
     }
 
     runs {
         client {
-            workingDirectory file('runs/client')
+            workingDirectory project.file('run')
             ideaModule "${rootProject.name}.${project.name}.main"
             taskName 'Client'
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
             mods {
                 modClientRun {
                     source sourceSets.main
+                    source project(":common").sourceSets.main
                 }
             }
         }
 
         server {
-            workingDirectory file('runs/server')
+            workingDirectory project.file('run')
             ideaModule "${rootProject.name}.${project.name}.main"
             taskName 'Server'
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
             mods {
                 modServerRun {
                     source sourceSets.main
+                    source project(":common").sourceSets.main
                 }
             }
         }
 
         data {
-            workingDirectory file('runs/data')
+            workingDirectory project.file('run')
             ideaModule "${rootProject.name}.${project.name}.main"
             args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
             taskName 'Data'
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
             mods {
                 modDataRun {
                     source sourceSets.main
+                    source project(":common").sourceSets.main
                 }
             }
         }
@@ -62,20 +73,27 @@ minecraft {
 
 sourceSets.main.resources.srcDir 'src/generated/resources'
 
-apply from: 'dependencies.gradle'
+dependencies {
+    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
+    compileOnly project(":common")
+    annotationProcessor("org.spongepowered:mixin:0.8.5-SNAPSHOT:processor")
 
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            fg.component(it)
-        }
+    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.4.1"))
+    implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.4.1")) {
+        jarJar.ranged(it, "[0.4.1,)")
     }
 }
 
-sourceSets.each {
-    def dir = layout.buildDirectory.dir("sourcesSets/$it.name")
-    it.output.resourcesDir = dir
-    it.java.destinationDirectory = dir
+tasks.withType(JavaCompile).configureEach {
+    source(project(":common").sourceSets.main.allSource)
+}
+
+tasks.withType(Javadoc).configureEach {
+    source(project(":common").sourceSets.main.allJava)
+}
+
+tasks.named("sourcesJar", Jar) {
+    from(project(":common").sourceSets.main.allSource)
 }
 
 tasks.register('buildRelease') {
@@ -91,37 +109,23 @@ tasks.register('buildRelease') {
     }
 }
 
-tasks.register('publishCurseForge', TaskPublishCurseForge) {
-    dependsOn ':buildAll'
-    group = 'publishing'
-    apiToken = System.getenv('curseforge_token')
-
-    def filePath = "output/${version}/${mod_id}-forge-${minecraft_version}-${version}.jar"
-    def file = upload(curseforge_forge_id, rootProject.file(filePath))
-    file.displayName = "${mod_name} ${version}"
-    file.releaseType = publish_release_type
-    file.changelog = rootProject.file('CHANGELOG.md').text
-    file.changelogType = 'markdown'
-    file.addGameVersion(minecraft_version)
-    file.addModLoader("forge")
+processResources {
+    from project(":common").sourceSets.main.resources
 }
 
-modrinth {
-    token = System.getenv("modrinth_token")
+jar.finalizedBy('reobfJar')
 
-    def filePath = "output/${version}/${mod_id}-forge-${minecraft_version}-${version}.jar"
-    uploadFile = rootProject.file(filePath)
-    projectId = "fragmentum"
-    versionName = "${mod_name} ${version}"
-    versionNumber = "${version}"
-    versionType = publish_release_type
-    changelog = rootProject.file('CHANGELOG.md').text
-    gameVersions = [ minecraft_version ]
-    loaders = ["forge"]
-}
-
-tasks.register('publishModrinth') {
-    dependsOn ':buildAll'
-    dependsOn 'modrinth'
-    group = 'publishing'
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            artifactId base.archivesName.get()
+            from components.java
+            fg.component(it)
+        }
+    }
+    repositories {
+        maven {
+            url "file://" + System.getenv("local_maven")
+        }
+    }
 }
