--- a/platform/forge/src/main/resources/META-INF/mods.toml
+++ b/platform/forge/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader = "javafml"
-loaderVersion = "${forge_loader_version_range}"
+loaderVersion = "[0,)"
 license = "${license}"
 
 [[mods]]
@@ -21,6 +21,6 @@ side = "BOTH"
 [[dependencies.${mod_id}]]
 modId = "minecraft"
 mandatory = true
-versionRange = "${minecraft_version_range}"
+versionRange = "[${minecraft_version},)"
 ordering = "NONE"
 side = "BOTH"
