--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,7 @@ subprojects {
     java.withJavadocJar()
 
     jar {
-        from(rootProject.file("LICENSE")) {
-            rename { "${it}_${mod_name}" }
-        }
+        from(rootProject.file("LICENSE.md"))
         manifest {
             attributes([
                     'Specification-Title'     : mod_name,
@@ -33,9 +31,7 @@ subprojects {
     }
 
     sourcesJar {
-        from(rootProject.file("LICENSE")) {
-            rename { "${it}_${mod_name}" }
-        }
+        from(rootProject.file("LICENSE.md"))
     }
 
     repositories {
@@ -80,8 +76,7 @@ subprojects {
     }
 }
 
-tasks.register('buildRelease') {
-    dependsOn ':platform:fabric:buildRelease',
-            ':platform:forge:buildRelease'
+tasks.register('releaseAll') {
+    dependsOn ':fabric:releaseFabric', ':forge:releaseForge'
     group = 'build'
 }
