--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # Project
 group=dev.obscuria.healight
 java_version=17
-version=1.0.1
+version=1.1.0
 minecraft_version=1.20.1
 
 # Mod
@@ -10,7 +10,7 @@ mod_id=healight
 mod_author=Obscuria
 license=All-Rights-Reserved
 credits=
-description=Enhances the existing damage flash by adding green glow when entities heal, providing better visual feedback.
+description=Adds a green glow when entities heal for clearer feedback.
 
 # Fabric
 fabric_version=0.92.3+1.20.1
